--- a/index.html
+++ b/index.html
@@ -240,46 +240,36 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- //reviews -->
 				<!-- cuisine -->
 				<div class="left-side">
-					<h3 class="agileits-sear-head">Cuisine</h3>
+					<h3 class="agileits-sear-head">Locations</h3>
 					<ul>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">South American</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">French</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Greek</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Chinese</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Japanese</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Italian</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Mexican</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Thai</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">Indian</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span"> Spanish </span>
 						</li>
 					</ul>
@@ -287,57 +277,39 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- //cuisine -->
 				<!-- deals -->
 				<div class="deal-leftmk left-side">
-					<h3 class="agileits-sear-head">Special Deals</h3>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d2.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Lay's Potato Chips</h3>
-							<a href="single.html">$18.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d1.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Bingo Mad Angles</h3>
-							<a href="single.html">$9.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d4.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Tata Salt</h3>
-							<a href="single.html">$15.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d5.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Gujarat Dry Fruit</h3>
-							<a href="single.html">$525.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="special-sec1">
-						<div class="col-xs-4 img-deals">
-							<img src="images/d3.jpg" alt="">
-						</div>
-						<div class="col-xs-8 img-deal1">
-							<h3>Cadbury Dairy Milk</h3>
-							<a href="single.html">$149.00</a>
-						</div>
-						<div class="clearfix"></div>
-					</div>
+					<h3 class="agileits-sear-head">Dates</h3>
+					<ul>
+						<li>
+							<span class="span">South American</span>
+						</li>
+						<li>
+							<span class="span">French</span>
+						</li>
+						<li>
+							<span class="span">Greek</span>
+						</li>
+						<li>
+							<span class="span">Chinese</span>
+						</li>
+						<li>
+							<span class="span">Japanese</span>
+						</li>
+						<li>
+							<span class="span">Italian</span>
+						</li>
+						<li>
+							<span class="span">Mexican</span>
+						</li>
+						<li>
+							<span class="span">Thai</span>
+						</li>
+						<li>
+							<span class="span">Indian</span>
+						</li>
+						<li>
+							<span class="span"> Spanish </span>
+						</li>
+					</ul>
 				</div>
 				<!-- //deals -->
 			</div>
