Updated Sidebar to wireframe info

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<!-- price range -->
 				<div class="range">
-					<h3 class="agileits-sear-head">Price range</h3>
+					<h3 class="agileits-sear-head">Types</h3>
 					<ul class="dropdown-menu6">
 						<li>
 
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- //price range -->
 				<!-- food preference -->
 				<div class="left-side">
-					<h3 class="agileits-sear-head">Food Preference</h3>
+					<h3 class="agileits-sear-head">Topics</h3>
 					<ul>
 						<li>
 							<input type="checkbox" class="checked">
@@ -152,7 +152,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- //food preference -->
 				<!-- discounts -->
 				<div class="left-side">
-					<h3 class="agileits-sear-head">Discount</h3>
+					<h3 class="agileits-sear-head">Locations</h3>
 					<ul>
 						<li>
 							<input type="checkbox" class="checked">
@@ -243,34 +243,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h3 class="agileits-sear-head">Locations</h3>
 					<ul>
 						<li>
-							<span class="span">South American</span>
+							<span class="span">Irkutsk, Russia (1)</span>
 						</li>
 						<li>
-							<span class="span">French</span>
+							<span class="span">Moscow, Russia (2)</span>
 						</li>
 						<li>
-							<span class="span">Greek</span>
+							<span class="span">St. Petersburg, Russia (1)</span>
 						</li>
 						<li>
-							<span class="span">Chinese</span>
+							<span class="span">Vladivostok, Russia (2)</span>
 						</li>
 						<li>
-							<span class="span">Japanese</span>
+							<span class="span">Bishkek, Kyrgystan (2)</span>
 						</li>
 						<li>
-							<span class="span">Italian</span>
-						</li>
-						<li>
-							<span class="span">Mexican</span>
-						</li>
-						<li>
-							<span class="span">Thai</span>
-						</li>
-						<li>
-							<span class="span">Indian</span>
-						</li>
-						<li>
-							<span class="span"> Spanish </span>
+							<span class="span">Havana, Cuba (1)</span>
 						</li>
 					</ul>
 				</div>
@@ -280,35 +268,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h3 class="agileits-sear-head">Dates</h3>
 					<ul>
 						<li>
-							<span class="span">South American</span>
+							<span class="span">Fall Semester</span>
 						</li>
 						<li>
-							<span class="span">French</span>
+							<span class="span">Spring Semester</span>
 						</li>
 						<li>
-							<span class="span">Greek</span>
+							<span class="span">Summer</span>
 						</li>
 						<li>
-							<span class="span">Chinese</span>
+							<span class="span">Spring Break</span>
 						</li>
 						<li>
-							<span class="span">Japanese</span>
+							<span class="span">Flex Schedule(3)</span>
 						</li>
 						<li>
-							<span class="span">Italian</span>
+							<span class="span">Multi-session(1)</span>
 						</li>
 						<li>
-							<span class="span">Mexican</span>
+							<span class="span">Single session(2)</span>
 						</li>
-						<li>
-							<span class="span">Thai</span>
-						</li>
-						<li>
-							<span class="span">Indian</span>
-						</li>
-						<li>
-							<span class="span"> Spanish </span>
-						</li>
+						
 					</ul>
 				</div>
 				<!-- //deals -->
