updated sidebar to match titles and text except 1

--- a/index.html
+++ b/index.html
@@ -123,59 +123,48 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<input type="submit" value=" ">
 					</form>
 				</div>
-				<!-- price range -->
-				<div class="range">
-					<h3 class="agileits-sear-head">Types</h3>
-					<ul class="dropdown-menu6">
-						<li>
-
-							<div id="slider-range"></div>
-							<input type="text" id="amount" style="border: 0; color: #ffffff; font-weight: normal;" />
-						</li>
-					</ul>
-				</div>
-				<!-- //price range -->
 				<!-- food preference -->
 				<div class="left-side">
-					<h3 class="agileits-sear-head">Topics</h3>
+					<h3 class="agileits-sear-head">Types</h3>
 					<ul>
 						<li>
-							<input type="checkbox" class="checked">
-							<span class="span">Vegetarian</span>
+							<span class="span">All (100)</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
-							<span class="span">Non-Vegetarian</span>
+							<span class="span">Study Abroad (26)</span>
+						</li>
+						<li>
+							<span class="span">Online Course(18)</span>
+						</li>
+						<li>
+							<span class="span">Explorer Course(1)</span>
+						</li>
+						<li>
+							<span class="span">Event (14)</span>
 						</li>
 					</ul>
 				</div>
 				<!-- //food preference -->
 				<!-- discounts -->
 				<div class="left-side">
-					<h3 class="agileits-sear-head">Locations</h3>
+					<h3 class="agileits-sear-head">Topics</h3>
 					<ul>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">5% or More</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">10% or More</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">20% or More</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">30% or More</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">50% or More</span>
 						</li>
 						<li>
-							<input type="checkbox" class="checked">
 							<span class="span">60% or More</span>
 						</li>
 					</ul>
